# quadigi

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
classes/: Divide.cpp  Divide.h  ExpressionParser.cpp  ExpressionParser.h  Multiply.cpp  Multiply.h  Subtract.cpp  Subtract.h  Sum.cpp  Sum.h  Value.cpp  Value.h  VariableFill.cpp  VariableFill.h
interfaces/: INode.h
tests/: TestMultiply.cpp  TestParsing.cpp  TestSum.cpp
